# stm32loader

./: .bumpversion.cfg  .flake8  .gitignore  .pylintrc  .travis.yml  ALTERNATIVES.md  CHANGELOG.md  DEVELOP.md  EXTEND.md  MANIFEST.in  README  README.md  RUN.md  noxfile.py  pyproject.toml  setup.cfg  setup.py  stm32loader.py  tox.ini
.github/workflows/: ci.yaml  lint.yaml  test.yaml
stm32loader/: __init__.py  __main__.py  __version__.py  args.py  bootloader.py  hexfile.py  main.py  serial.py  stm32loader.py  uart.py
tests/: test_bootloader.py
tests/data/: small.hex
tests/integration/: test_stm32bootloader.py  test_stm32loader.py
tests/unit/: test_arguments.py  test_bootloader.py  test_hexfile.py
