[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[isort]
line_length = 98
line_width = 98
multi_line_output = 2

[flake8]
max-line-length = 98
max-doc-length = 78
exclude =
	.git,
	.idea,
	__pycache__,
	build,
	dist,
	*.egg-info
ignore =
	# be compatible to black
	C812,       # Missing trailing comma
	E203,       # Whitespace before ':'
per-file-ignores =
    # Missing docstring in public function
	tests/*:D103,

