[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[isort]
line_length = 98
multi_line_output = 2

[flake8]
max-line-length = 98
max-doc-length = 78
exclude =
	.git,
	.idea,
	__pycache__,
	build,
	dist,
	*.egg-info
ignore =
	# be compatible to black
	C812,       # Missing trailing comma
	E203,       # Whitespace before ':'
    W503,       # line break before binary operator
per-file-ignores =
    # Missing docstring in public function
	tests/*:D103,
	# .next() is not a thing in Python 3
	stm32loader/bootloader.py:B305,

[tool:pytest]
addopts = --strict -m "not (hardware or hardware_missing)"
markers =
	hardware
	missing_hardware
