[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[isort]
line_length = 98
multi_line_output = 2

[flake8]
max-line-length = 98
max-doc-length = 78
exclude =
	.git,
	.idea,
	__pycache__,
	build,
	dist,
	*.egg-info

# be compatible to black
# Missing trailing comma
# Whitespace before ':'
# line break before binary operator
ignore =
	C812,
	E203,
    W503,

# Missing docstring in public function
# .next() is not a thing in Python 3
per-file-ignores =
	tests/*:D103,
	stm32loader/bootloader.py:B305,

[tool:pytest]
addopts = --strict -m "not (hardware or hardware_missing)"
markers =
	hardware
	missing_hardware
